samples/younginfo-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: younginfo-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: younginfo
spec:
  hosts:
    - "*"
  gateways:
    - younginfo-gateway
  http:
    - match:
        - uri:
            exact: /mypage
      route:
        - destination:
            host: mypage
            port:
              number: 9080
